<resources>
    <string name="appName">RutBis</string>
    <string name="backButton">Back</string>

    <string name="greeting">Welcome</string>

    <!-- SplashScreen -->
    <string name="by_neddy_ap">By: Neddy AP</string>

    <!-- Header -->
    <string name="header_title">Header Title</string>
    <string name="header_home">Welcome</string>
    <string name="header_bus">Find\nYour Bus</string>
    <string name="header_terminal">Find\nBus Terminal</string>

    <!-- Auth -->
    <string name="auth_subtitle_1">Subtitle 1</string>
    <string name="auth_title">Auth Title</string>
    <string name="auth_subtitle_2">Subtitle 2</string>
    <string name="input_email_phone">Enter Email / Phone Number</string>
    <string name="input_phone_text">Enter Phone Number</string>
    <string name="input_email_text">Enter Email</string>
    <string name="input_password_text">Enter Password</string>
    <string name="auth_button">Continue</string>
    <string name="footer_text_1">Footer Subtitle 1</string>
    <string name="auth_subButton">Footer Button</string>
    <string name="footer_text_2">Footer Subtitle 2</string>
    <string name="auth_verification_timer">Code will expire in 01:00</string>

    <!-- Home Frame -->
    <string name="user_location">Jl. Jend. Sudirman No. 1, Jakarta</string>
    <string name="search_text">Where to?</string>
    <string name="lokasi_saat_ini">Current Location</string>

    <!-- Promo Frame -->

    <!-- Explore Frame -->
    <string name="bus_name">Bus Name</string>
    <string name="bus_start_time">08:00</string>
    <string name="bus_start">Bus Start</string>
    <string name="bus_end">Bus End</string>
    <string name="bus_end_time">10:30</string>
    <string name="busLicense">B 23214 AC</string>
    <string name="brandLicense">AG122</string>

    <string name="terminal_name">Terminal Name</string>
    <string name="view">View</string>
    <!-- Favorite Frame -->

    <!-- Settings Frame -->
    <string name="app_settings">App Settings</string>
    <string name="about">About</string>
    <string name="user">User</string>
    <string name="support">Customer Support</string>
    <string name="logout">Logout</string>

    <!-- Navbar -->
    <string name="home">Home</string>
    <string name="Activity">Activity</string>
    <string name="explore">Explore</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>

    <string name="title_activity_maps">MapsActivity</string>
    <string name="activity_history">Activity</string>
    <string name="recent_activity">Recent</string>
    <string name="bus_number">Bus Number</string>
    <string name="bus_detail">Bus Detail</string>
    <string name="bus_brand">Bus Brand</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="select_the_bus">Select The Bus</string>
    <string name="bus_price">20,000</string>
    <string name="bus_journey_time">2.5 Hours</string>
    <string name="terminal_detail">Terminal Detail</string>
    <string name="location">Location</string>
    <string name="terminal_time">04:00 – 23:00</string>
    <string name="bus_search_result">Bus Result</string>
    <string name="terminal_search_result">Terminal Result</string>
    <string name="bus_journey">Bus Route</string>
    <string name="terminal_bus_available">Bus Available</string>
    <string name="search_result">Search Result</string>
    <string name="search">Search:</string>

</resources>