<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="36dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.login.LoginActivity">

    <include layout="@layout/auth_header" />

    <EditText
        android:id="@+id/login_email_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:hint="@string/input_email_no_handphone"
        android:inputType="phone"
        android:drawableStart="@drawable/ic_hashtag"
        android:drawablePadding="10dp"
        android:textSize="18sp"
        android:autofillHints="password" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:hint="@string/input_password_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:textSize="18sp"
        android:autofillHints="password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnPhoneLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:text="@string/auth_button"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/footer_text_1"
        android:textSize="18sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/footer_text_2"
        android:textSize="18sp"
        android:textColor="@color/blue3" />

</LinearLayout>