<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="36dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.auth.register.RegisterActivity">

    <include layout="@layout/auth_header" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:hint="@string/input_phone_text"
        android:drawableStart="@drawable/ic_phone"
        android:drawablePadding="10dp"
        android:inputType="phone"
        android:textSize="18sp"
        android:autofillHints="phone" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:hint="@string/input_email_text"
        android:drawableStart="@drawable/ic_hashtag"
        android:drawablePadding="10dp"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        android:autofillHints="emailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/gray"
        android:padding="10dp"
        android:hint="@string/input_password_text"
        android:drawableStart="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:inputType="textVisiblePassword"
        android:textSize="18sp"
        android:autofillHints="password" />

    <include layout="@layout/auth_footer" />

</LinearLayout>