<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.explore.bus.BusDetailActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="16dp"
        android:drawablePadding="6dp"
        android:minHeight="48dp"
        android:onClick="back"
        android:text="@string/bus_detail"
        android:textSize="32sp"
        app:drawableStartCompat="@drawable/ic_left" />

    <ImageView
        android:id="@+id/bus_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/placeholder_400x200"
        android:layout_marginVertical="6dp"
        android:importantForAccessibility="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bus_name"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textStyle="bold" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bus_detail"
            android:textStyle="bold"
            android:gravity="end"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/bus_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bus_name"
            android:textSize="20sp"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/bus_licence"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/busLicense"
            android:gravity="end"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom1"
            android:layout_marginHorizontal="12dp"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_clock"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/bus_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_journey_time"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom1"
            android:layout_marginHorizontal="12dp"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_line_3"
                android:importantForAccessibility="no" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_stop"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_custom1"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="6dp"
                android:src="@drawable/ic_rupiah"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/bus_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bus_price"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:layout_gravity="center" />
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/bus_journey"
        android:textSize="20sp"
        android:textStyle="bold"
        />


    <ProgressBar
        android:id="@+id/loadingProgressBarDetail"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/bus_journey_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp" />
</LinearLayout>
